#169 Document changes applied by #170